# Delitter

./: .dockerignore  .env.example  .gitignore  Dockerfile  build.sh  docker-compose.yml  license.txt  readme.md  supervisord.conf
.github/workflows/: backend-publish.yml  docker-in-docker.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  image_recognition-publish.yml  unified-container-publish.yml
code/: Dockerfile  docker-compose.yaml
code/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  ghcr-push.sh
code/backend/.cargo/: config.toml
code/backend/src/: main.rs
code/backend/src/handlers/: auth.rs  litter.rs  mod.rs
code/backend/src/models/: litter.rs  mod.rs  user.rs
code/backend/src/services/: analyzer.rs  auth.rs  image_recognition.rs  mod.rs
code/frontend/: .env.example  .firebaserc  README.md  inject-version.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
code/frontend/.firebase/: hosting.YnVpbGQ.cache
code/frontend/src/: app.css  app.html
code/frontend/src/lib/: Dock.svelte  LoginRegister.svelte  MapContainer.svelte  NavBar.svelte
code/frontend/src/lib/stores/: auth.ts
code/frontend/src/routes/: +layout.svelte  +page.svelte
code/frontend/static/: manifest.json
code/frontend/test_api/: http-client.env.json  login.http  register.http  report.http
code/image_recognition/: .gitignore  Dockerfile  README.md  __init__.py  analyzer.py  api.py  bounding_box.py  litter_vision.py  litter_vision_2.py  model_output_structure.py  models.py  requirements.txt
(+8 files in other folders)
