[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
derive_more = "2.0.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
log = "0.4.28"
mongodb = "3.3.0"
password-hash = "0.5.0"
rand_core = "0.9.3"
reqwest = { version = "0.12.24", features = ["multipart"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }

[[bin]]
name = "myapp"
path = "src/main.rs"
